@@ -1,6 +1,6 @@
 # Revs for libraries that either have more than one module or are
 # referenced from more than one ctms-commons ivy.xml.
-lib.slf4j.rev=1.5.11
+lib.slf4j.rev=1.6.4
 lib.spring.rev=3.0.7.RELEASE
 lib.generic-commons-collections.rev=4.01
 lib.hsqldb.rev=1.8.0.10
@@ -11,8 +11,8 @@ lib.csm.rev=4.2
 lib.clm.rev=4.2.beta
 lib.dbunit.rev=2.2
 
-lib.hibernate.rev=3.3.1.GA
-lib.hibernate-annotations.rev=3.4.0.GA
+lib.hibernate.rev=3.6.4.Final
+lib.hibernate-validator.rev=4.2.0.Final
 
 lib.servlet.rev=2.5
 lib.jsp.rev=2.0
