@@ -23,7 +23,7 @@
 
     <!-- TEST -->
     <dependency conf="unit-test->runtime" name="ctms-commons-testing-unit" rev="latest.integration"/>
-    <dependency conf="unit-test->*" org="ch.qos.logback" name="logback-classic" rev="0.9.20"/>
+    <dependency conf="unit-test->*" org="ch.qos.logback" name="logback-classic" rev="1.0.0"/>
     <dependency conf="unit-test->*" org="org.slf4j" name="log4j-over-slf4j" rev="${lib.slf4j.rev}"/>
     <dependency conf="unit-test->*" org="org.dbunit" name="dbunit" rev="${lib.dbunit.rev}"/>
     <dependency conf="unit-test->*" org="postgresql" name="postgresql" rev="8.2-504.jdbc3"/>
@@ -36,5 +36,6 @@
     <exclude module="slf4j-simple"/>
     <exclude module="spring" matcher="exact"/> <!-- from clm -->
     <exclude org="com.oracle.oc4j"/>
+    <exclude org="org.jboss.javaee"/>
   </dependencies>
 </ivy-module>
